<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_f5f6fa"
    tools:context=".ui.activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txt_description"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textViewFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_first_name"
                android:textColor="@color/c_455262"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:inputType="text"
                android:labelFor="@+id/textViewFirstName"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/c_004982"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_last_name"
                android:textColor="@color/c_455262"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/c_004982"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_usuario"
                android:textColor="@color/c_455262"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTextUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/c_004982"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_email"
                android:textColor="@color/c_455262"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/c_004982"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_password"
                android:textColor="@color/c_455262"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:inputType="text|textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/c_004982"
                android:visibility="visible" />

            <Button
                android:id="@+id/buttonCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/button"
                android:text="@string/txt_create_account"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="end"
                android:text="@string/txt_log_in"
                android:textColor="@color/c_b3b7c1"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
